[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
description = "A Rust proc-macro attribute parser"
documentation = "https://docs.rs/sea-bae"
edition = "2018"
homepage = "https://github.com/SeaQL/sea-bae"
keywords = ["macro", "derive", "attributes", "proc"]
categories = ["development-tools::procedural-macro-helpers"]
license = "MIT"
name = "sea-bae"
readme = "README.md"
repository = "https://github.com/SeaQL/sea-bae.git"
version = "0.2.1"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error3 = "3"
heck = "0.4"

[dev-dependencies]
trybuild = "1"

[lib]
proc-macro = true
path = "src/lib.rs"
